Modifiqué textos de las cards del index y novedades

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">La última tecnología</h3>
                                 <p class="card-text"><small class="text-muted">Los avances tenológico que transformaron la forma de trabajar</small></p>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit minus in asperiores ipsa commodi! Nemo tempora assumenda aspernatur reprehenderit maiores a, odit nobis, similique adipisci, asperiores dolore ipsum sunt sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut libero cum ipsam dicta commodi corporis animi aperiam nihil expedita porro quasi accusantium odio dolore harum unde aut, ipsa enim reiciendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, modi esse! Dolor itaque eius velit cupiditate, nostrum consequuntur non ipsa culpa harum quasi rem laborum facere eaque, incidunt ex aperiam.</p>
+                                <p class="card-text">Si hay algo a lo que tenemos que estar acostumbrados en nuestro entorno de trabajo es al cambio. En los últimos años los avances tecnológicos nos han hecho evolucionar a un ritmo vertiginoso y solo las personas que sepan adaptarse a estos cambios lograrán sobrevivir en un entorno laboral cada vez más competitivo. <br> Como puedes observar, los avances tecnológicos siempre han tenido un efecto revolucionario en el lugar de trabajo con el fin de facilitar los procesos y funciones,  optimizando recursos y aumentando la productividad. Saber cómo afectarán a cada uno de nosotros y en qué medida es difícil, pero, lo que sí sabemos es que los cambios tecnológicos han venido para quedarse tal y tenemos que saber adaptarnos a ellos y aprovecharlos como nuestros absolutos aliados.</p>
                             </div>
                         </div>
                         </div>
@@ -196,10 +196,9 @@
                 <div class="card h-100 overflow-hidden p-2">
                     <img src="assets/marcela.png" class="card-img-top" alt="mujer">
                     <div class="card-body">
-                    <strong class="card-title">Marcela Dam</strong>
-                    <p class="card-text">Diseñadora UX</p>
-                    <p class="card-text">Consectetur adipisicing elit. Quia voluptats quae quam hic soluta itaque aliquam repu<br> provident nisi. Dolorum sint, inventore nulla voluptatibus culpa iure.
-                        Lorem ipsum dolor sit amet consecte.</p>
+                        <strong class="card-title">Marcela Dam</strong> <br>
+                        <p class="card-text">Diseñadora UX</p>
+                        <p class="card-text">A la semana de haberme registrado consegí mi primer empleo en Diseño UX.<br>En mi equipo de trabajo me siento muy cómoda. <br> Trabajo en una empresa en Londres.</p>
                 </div>
             </div>
             <!--Comienzo Segundo Testimonio-->
@@ -210,8 +209,7 @@
                         <div class="card-body">
                         <strong class="card-title">Juan Encalada</strong>
                         <p class="card-text">Full Stack Developer</p>
-                        <p class="card-text">Consectetur adipisicing elit. Quia voluptats quae quam hic soluta itaque aliquam repu<br> provident nisi. Dolorum sint, inventore nulla voluptatibus culpa iure.
-                            Lorem ipsum dolor sit amet consecte.</p>
+                        <p class="card-text">Estaba buscando cambiar de empresa, fue así como conocí RemoteMind.<br>En mi trabajo hay un excelente clima laboral. Un equipo muy eficiente.<br> Trabajo en una empresa financiera en Georgia.</p>
                     </div>
                 </div>
             </div>
@@ -220,10 +218,9 @@
                 <div class="card h-100 overflow-hidden p-2">
                     <img src="assets/cristina.png" class="card-img-top" alt="mujer">
                     <div class="card-body">
-                    <strong class="card-title">Cristina Gonzales</strong>
+                    <strong class="card-title">Cristina Gonzales</strong> <br>
                     <p class="card-text">Traductora</p>
-                    <p class="card-text">Consectetur adipisicing elit. Quia voluptats quae quam hic soluta itaque aliquam repu<br> provident nisi. Dolorum sint, inventore nulla voluptatibus culpa iure.
-                        Lorem ipsum dolor sit amet consecte.</p>
+                    <p class="card-text">Buscaba aumentar mis ingresos, pude encontrar el trabajo que deseaba.<br>Mis horarios son muy flexibles.<br> Trabajo en una empresa de enseñanza de idiomas en la India.</p>
                     </div>
                 </div>
             </div>
