--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -109,7 +109,7 @@
             <h2 class="card__element">NOMADAS DIGITALES</h2>
             <em class="card__element--modifier">¿Qué es una Visa Nomada Digital?</em>
             <img class="card__element--modifier1" src="../assets/N1.jpg" alt="trabajo">
-            <p class="card-text p-4 text-justify">Para los que aún no lo saben, Un nómada digital es un profesional que usa las nuevas tecnologías para trabajar, y que lleva a cabo un estilo de vida nómada. Por lo general, los nómadas digitales trabajan de forma remota desde su casa, cafeterías, bibliotecas públicas, etc. en lugar de hacerlo en un lugar de trabajo fijo. Actualmente la cantidad de países que estan creando y brindando visas para nomadas digitales va en aumento. Esto permite que cada vez más trabajores remotos tengan la posibilidad de viajar y vivir hasta 12 meses en el destino elegido.</p>
+            <p class="card-text p-4 text-justify">Para los que aún no lo saben, Un nómada digital es un profesional que usa las nuevas tecnologías para trabajar, y que lleva a cabo un estilo de vida nómada. <br> Por lo general, los nómadas digitales trabajan de forma remota desde su casa, cafeterías, bibliotecas públicas, etc. en lugar de hacerlo en un lugar de trabajo fijo. <br> Actualmente la cantidad de países que estan creando y brindando visas para nomadas digitales va en aumento. Esto permite que cada vez más trabajores remotos tengan la posibilidad de viajar y vivir hasta 12 meses en el destino elegido.</p>
         </article>
     </section>
 
@@ -121,7 +121,7 @@
             <h2 class="card__element">LA NUEVA NORMALIDAD</h2>
             <em class="card__element--modifier">Viajar en tiempos de pandemia</em>
             <img class="card__element--modifier1" src="../assets/N2.jpg" alt="viaje">
-            <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta adipisci error quidem culpa? Quae ea quisquam debitis et aperiam eligendi neque quaerat saepe nisi, quos quidem, autem esse exercitationem Lorem ipsum dolor sit amet consectetur adipisicing elit. tempore assumenda eos, esse et ut repellat ab fugit quis sunt, veritatis impedit provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptate culpa corrupti dolor recusandae magnam, perferendis delectus adipisci! Magnam velit numquam sit reiciendis magni, eligendi ipsam rerum excepturi molestias veniam!</p>
+            <p class="card-text p-4 text-justify">Algunos gobiernos estatales, locales y territoriales tienen requisitos, como exigir que la gente se ponga mascarilla o se someta a pruebas y que los que viajaron recientemente se queden en casa hasta 14 días. <br> Para ahorrarte sorpresas desagradables y demoras, infórmate sobre las restricciones en tu destino y en cualquier otro lugar en el que te detengas durante el viaje. Tené en cuenta que las restricciones pueden cambiar rápidamente dependiendo de las condiciones locales. <br> También es importante tener en cuenta que la situación de la COVID-19, como el nivel de contagio y la presencia de variantes, es distinta en cada país. Al acercarse la fecha de tu viaje, vuelve a consultar si hay información actualizada.</p>
         </article>
     </section>
     </div>
@@ -129,19 +129,19 @@
     <div class="row row-cols-1 row-cols-md-2 g-4 d-flex justify-content-center m-3">
     <section class="col-md-3">
         <article class="card ">
-            <h2 class="card__element">Titulo</h2>
-            <em class="card__element--modifier">subtitulo</em>
+            <h2 class="card__element">TRABAJO EN EQUIPO</h2>
+            <em class="card__element--modifier">Consejos para teletrabajar en equipo</em>
             <img class="card__element--modifier1" src="../assets/N3.jpg" alt="teletrabajo">
-            <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
+            <p class="card-text p-4 text-justify">Precisamente para que los equipos logren un desempeño exitoso en estas circunstancias, lo primordial es fomentar la interacción y el trabajo colaborativo, pero para lograrlo debemos apalancar el trabajo remoto en la tecnología. <br> Para que el teletrabajo funcione de manera óptima,es necesario apalancarse en el desarrollo y despliegue tecnológico actual, manteniendo a los equipos fortalecidos y enfocados en objetivos comunes. <br> Es importante mantener la cercanía entre compañeros, establecer objetivos claros, utilizar herrramientas colaborativas y que haya confianza en el equipo.</p>
         </article>
     </section>
 
     <section class="col-md-3">
         <article class="card">
-            <h2 class="card__element">Titulo</h2>
-            <em class="card__element--modifier">subtitulo</em>
+            <h2 class="card__element">EMPLEO IT</h2>
+            <em class="card__element--modifier">La demanda laboral del sector IT</em>
             <img class="card__element--modifier1" src="../assets/N4.jpg" alt="teletrabajo">
-            <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
+            <p class="card-text p-4 text-justify">A nivel mundial, las carreras con salida laboral fueron en los últimos años las del área de tecnología de la información (IT, por sus siglas en inglés) y este fenómeno se aceleró y acrecentó con la pandemia, que movió a las empresas hacia una profunda digitalización y deslocalización. <br>Dentro de las carreras con mayor salida laboral, podemos encontrar Data Science y Business Intelligence, Marketing Digital, Diseño Web y Mobile, Diseñador UX, Desarrollador Full Stack, Especialista en Redes, Cyberseguridad, entre otras que ofrecen además buenas perspectivas en materia de empleabilidad y sueldos altos. </p>
         </article>
     </section>
     </div>
@@ -150,19 +150,19 @@
     <div class="row row-cols-1 row-cols-md-2 g-4 d-flex justify-content-center m-3">
         <section class="col-md-3">
             <article class="card ">
-                <h2 class="card__element">Titulo</h2>
-                <em class="card__element--modifier">subtitulo</em>
+                <h2 class="card__element">COWORKING</h2>
+                <em class="card__element--modifier">El nuevo espacio de trabajo</em>
                 <img class="card__element--modifier1" src="../assets/N5.jpg" alt="teletrabajo">
-                <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
+                <p class="card-text p-4 text-justify">El coworking se refiere a trabajar juntos bajo un mismo techo utilizando los mismos recursos pero para diferentes empresas. Es un estilo moderno de trabajo en donde las personas comparten una oficina común incluso para actividades independientes. <br> Los espacios de coworking ofrecen un conjunto de comodidades similares a las de una oficina, como escritorios compartidos, salas de reuniones privadas, cocinas, café y más. A menudo, también se ofrecen como una comunidad.</p>
             </article>
         </section>
     
         <section class="col-md-3">
             <article class="card">
-                <h2 class="card__element">Titulo</h2>
-                <em class="card__element--modifier">subtitulo</em>
+                <h2 class="card__element">ESTUDIAR CARRERAS IT</h2>
+                <em class="card__element--modifier">Formaciones cortas con salida laboral</em>
                 <img class="card__element--modifier1" src="../assets/N6.jpg" alt="teletrabajo">
-                <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
+                <p class="card-text p-4 text-justify">Muchas de las nuevas profesiones que surgen de los avances tecnológicos aparecen y desaparecen una vez que esas innovaciones quedan desactualizadas o se transforman, por lo que también las carreras cortas y enfocadas son la mejor forma de adentrarse en las profesiones del futuro además de ser carreras con salida laboral. <br> Si deseas dotartede una exelente preparación para saltar al mercado laboral, un buen lugar puede ser <a href="https://www.coderhouse.com/" target="_BLANK"><strong>Coderhouse</strong></a>, donde encontraras muchas propuestas de estudio</p>
             </article>
         </section>
         </div>
