--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
                 <section class="row d-flex justify-content-center m-5">
                     <div class=" cardSegunda card mb-3" style="max-width: auto;">
                         <div class="row g-0">
-                            <div class=" cardSegundaImagen col-md-4">
-                            <img src="assets/tecnologias.png" class="cardSegundaImagen__element img-fluid rounded-start" alt="tecnologia" style="height: 350px;">
+                            <div class=" col-md-4 ">
+                            <img src="assets/tecnologias.png" class="img-fluid w-100 h-100" alt="tecnologia">
                             </div>
                             <div class=" col-md-8">
                             <div class=" cardSegunda1 card-body">
-                                <h3 class=" cardSegunda1__element card-title">La última tecnología</h3>
-                                <p class=" cardSegunda1__element--modifier"><small class="text-muted">Los avances tenológico que transformaron la forma de trabajar</small></p>
-                                <p class=" cardSegunda1__element--modifier1">
-                                    Si hay algo a lo que tenemos que estar acostumbrados en nuestro entorno de trabajo es al cambio. En los últimos años los avances tecnológicos nos han hecho evolucionar a un ritmo vertiginoso y solo las personas que sepan adaptarse a estos cambios lograrán sobrevivir en un entorno laboral cada vez más competitivo. <br>
-                                    Como puedes observar, los avances tecnológicos siempre han tenido un efecto revolucionario en el lugar de trabajo con el fin de facilitar los procesos y funciones,  optimizando recursos y aumentando la productividad. Saber cómo afectarán a cada uno de nosotros y en qué medida es difícil, pero, lo que sí sabemos es que los cambios tecnológicos han venido para quedarse tal y tenemos que saber adaptarnos a ellos y aprovecharlos como nuestros absolutos aliados.
+                                <h3 class=" cardSegunda1__element card-title lh-lg">La última tecnología</h3>
+                                <p class=" cardSegunda1__element--modifier lh-lg"><small class="text-muted">Los avances tenológico que transformaron la forma de trabajar</small></p>
+                                <p class=" cardSegunda1__element--modifier1 lh-lg">
+                                    <!--Si hay algo a lo que tenemos que estar acostumbrados en nuestro entorno de trabajo es al cambio. En los últimos años los avances tecnológicos nos han hecho evolucionar a un ritmo vertiginoso y solo las personas que sepan adaptarse a estos cambios lograrán sobrevivir en un entorno laboral cada vez más competitivo. <br>-->
+                                    Como puedes observar, los avances tecnológicos siempre han tenido un efecto revolucionario en el lugar de trabajo con el fin de facilitar los procesos y funciones, optimizando recursos y aumentando la productividad. Saber cómo afectarán a cada uno de nosotros y en qué medida es difícil, pero, lo que sí sabemos es que los cambios tecnológicos han venido para quedarse tal y tenemos que saber adaptarnos a ellos y aprovecharlos como nuestros absolutos aliados.
                                 </p>
                             </div>
                         </div>
@@ -170,6 +170,7 @@
                     </div>
                 </section>
             </div>
+
 
 
 
