--- a/pages/postulaciones.html
+++ b/pages/postulaciones.html
@@ -83,17 +83,19 @@
     <!--Comienzo banner-->
     <div class="container_fluid">
         <div class="row">
-        <div class="banner p-5 text-center bg-image" style="background-image: url('../assets/nosotros\ banner.jpg');">
-            <div class="mask mt-5 mb-2">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class=" action text-white d-block">
-                        <h2 class=" action__element mt-5 mb-3 p-2">Postulaciones</h2>
-                        <p class=" action__element1 mb-4 p-2">Haz click en el enlace para conocer más sobre nosotros</p>
-                        <a class="action__element--modifier btn btn-outline-light btn-lg" href="nosotros.html" role="button">Nosotros</a>
+            <div class="col-12">
+                <div class="banner p-5 text-center bg-image w-100" style="background-image: url('../assets/nosotros\ banner.jpg');">
+                    <div class="mask mt-5 mb-2">
+                        <div class="d-flex justify-content-center align-items-center h-100">
+                            <div class=" action text-white d-block">
+                                <h2 class=" action__element mt-5 mb-3 p-2">Postulaciones</h2>
+                                <p class=" action__element1 mb-4 p-2">Haz click en el enlace para conocer más sobre nosotros</p>
+                                <a class="action__element--modifier btn btn-outline-light btn-lg" href="nosotros.html" role="button">Nosotros</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
     <!-- Fin banner -->
@@ -193,7 +195,7 @@
                     <div class="col-md-3">
                         <div class="card1">
                             <i class="icon1 fab fa-fly"></i>
-                            <h3 class="card1__element">Full-Stack Developer</h3>
+                            <h3 class="card1__element">Front-End Developer</h3>
                             <ul class="card1__element">
                                 <li class="card1__element card1__element--modifier">Más de 3 años de experiencia</li>
                                 <li class="card1__element card1__element--modifier">Horario flexible</li>
@@ -219,7 +221,7 @@
                     <div class="col-md-3">
                         <div class="card1">
                             <i class="icon3 fab fa-grav"></i>
-                            <h3 class="card1__element">UX Designer</h3>
+                            <h3 class="card1__element">UI Designer</h3>
                             <ul class="card1__element">
                                 <li class="card1__element card1__element--modifier">Experiencia en diseño de software</li>
                                 <li class="card1__element card1__element--modifier">Trabajo a un ritmo rápido</li>
@@ -234,7 +236,7 @@
                     <div class="col-md-3">
                         <div class="card1">
                             <i class="icon4 fab fa-canadian-maple-leaf"></i>
-                            <h3 class="card1__element">Senior Content Writer</h3>
+                            <h3 class="card1__element">Junior Content Writer</h3>
                             <ul class="card1__element">
                                 <li class="card1__element card1__element--modifier">Excelentes habilidades de gestión de proyecto</li>
                                 <li class="card1__element card1__element--modifier">Experiencia en estrategia de SEO</li>
@@ -260,7 +262,7 @@
                     <div class="col-md-3">
                         <div class="card1">
                             <i class="icon6 fab fa-wizards-of-the-coast"></i>
-                            <h3 class="card1__element">Data Scientist</h3>
+                            <h3 class="card1__element">Data Analyst</h3>
                             <ul class="card1__element">
                                 <li class="card1__element card1__element--modifier">Habilidades SQL avanzadas</li>
                                 <li class="card1__element card1__element--modifier">Capacidad para trabajar en colaboración en diferentes equipos</li>
