--- a/pages/premium.html
+++ b/pages/premium.html
@@ -85,17 +85,19 @@
         <!--Comienzo banner-->
     <div class="container_fluid">
         <div class="row">
-        <div class="banner p-5 text-center bg-image" style="background-image: url('../assets/servicios\ banner.jpg');">
-            <div class="mask mt-5 mb-2">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class=" action text-white d-block">
-                        <h2 class=" action__element mt-5 mb-3 p-2">Un plan para cada necesidad</h2>
-                        <p class=" action__element1 mb-4 p-2">Conocé todos nuestros planes</p>
-                        <a class="action__element--modifier btn btn-outline-light btn-lg" href="servicios.html" role="button">Servicios</a>
+            <div class="col-12">
+                <div class="banner p-5 text-center bg-image w-100 img-fluid" style="background-image: url('../assets/servicios\ banner.jpg');">
+                    <div class="mask mt-5 mb-2">
+                        <div class="d-flex justify-content-center align-items-center h-100">
+                            <div class=" action text-white d-block">
+                                <h2 class=" action__element mt-5 mb-3 p-2">Un plan para cada necesidad</h2>
+                                <p class=" action__element1 mb-4 p-2">Conocé todos nuestros planes</p>
+                                <a class="action__element--modifier btn btn-outline-light btn-lg" href="servicios.html" role="button">Servicios</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div>  
         </div>
     </div>
     <!-- Fin banner -->
