--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -168,10 +168,10 @@
         
         </div>
         
-            <section class="container_ fluid"> 
-                <article class="row m-5 aling-items-center d-flex justify-content-center">
+            <section class="container_fluid"> 
+                <article class="row m-5 d-flex justify-content-center">
                 <!--Acá va una tabla-->
-                <div class="col-md-4">
+                <div class=" col-sm-8 col-md-4 d-flex justify-content-center m-5">
                     <table class="table table-bordered table-striped">
                     <tr>
                         <th class="text-table">Plan</th>
