--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -78,15 +78,23 @@
             <!--Fin del Nav-->
 
         <!--Comienzo banner-->
-        <div class="banner p-5 text-center bg-image" style="background-image: url('../assets/servicios\ banner.jpg');">
-            <div class="mask mt-5 mb-2">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class="textoPortada text-white d-block">
-                        <h2 class=" textoPortada__element mt-5 mb-3 p-2">Contacto</h2>
+        <div class="container_fluid ">
+            <div class="row">
+                <div class="col-12 ">
+                    <div class="banner p-5 text-center bg-image w-100 img-fluid" style="background-image: url('../assets/servicios\ banner.jpg');">
+                        <div class="mask mt-5 mb-2">
+                            <div class="d-flex justify-content-center align-items-center h-100">
+                                <div class="textoPortada text-white d-block">
+                                    <h2 class=" textoPortada__element mt-5 mb-3 p-2">Contacto</h2>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
     <!-- Fin banner -->
         
     
