--- a/pages/free.html
+++ b/pages/free.html
@@ -85,17 +85,19 @@
         <!--Comienzo banner-->
     <div class="container_fluid">
         <div class="row">
-        <div class="banner p-5 text-center bg-image" style="background-image: url('../assets/servicios\ banner.jpg');">
-            <div class="mask mt-5 mb-2">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class=" action text-white d-block">
-                        <h2 class=" action__element mt-5 mb-3 p-2">Un plan para cada necesidad</h2>
-                        <p class=" action__element1 mb-4 p-2">Conocé todos nuestros planes</p>
-                        <a class="action__element--modifier btn btn-outline-light btn-lg" href="servicios.html" role="button">Servicios</a>
+            <div class="col-12 ">
+                <div class="banner p-5 text-center bg-image w-100 img-fluid" style="background-image: url('../assets/servicios\ banner.jpg');">
+                    <div class="mask mt-5 mb-2">
+                        <div class="d-flex justify-content-center align-items-center h-100">
+                            <div class=" action text-white d-block">
+                                <h2 class=" action__element mt-5 mb-3 p-2">Un plan para cada necesidad</h2>
+                                <p class=" action__element1 mb-4 p-2">Conocé todos nuestros planes</p>
+                                <a class="action__element--modifier btn btn-outline-light btn-lg" href="servicios.html" role="button">Servicios</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
     <!-- Fin banner -->
@@ -111,16 +113,16 @@
         </div>
     </div>
     
-    <div class="container_fluid">
+    <div class="container">
         <section class="row d-flex justify-content-center m-5">
-            <article class="col-md-4">
+            <article class="col-xs-12 col-sm-12 col-md-8 col-lg-4">
                 <div class="card bg-dark text-white">
                     <img src="../assets/banner.png" class="card-img img-fluid rounded" alt="fondo">
                     <div class="card-img-overlay text-center">
                         <h3 class="card-title">Registrate</h3>
                         <p class="card-text">Tenemos planes pensados para vos</p>
-                        <br>
-                        <div class=" button col-12">
+                        
+                        <div class="button col-sm-12  start-50 translate-middle-y w-100">
                                 <a class=" button__element btn btn-primary" href="#formulario" type="button">
                                     Completa el registro
                                 </a>
@@ -129,7 +131,7 @@
                     </div>
                 </div>
             </article>
-        </section>
+        </section> 
     </div>
 
 
