Ultimas modificaciones responsive

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -81,14 +81,21 @@
             
 
         <!--Comienzo banner-->
-            <div class="bg-image">
-            <img src="../assets/novedades.jpg"  class="img-fluid w-100" alt="banner"/>
-                    <div class="mask">
-                        <div class="textoPortada d-flex justify-content-center align-items-center h-100">
-                            <p class="textoPortada__element text-white text-center d-block mb-3 h2 position-absolute top-50 start-50 translate-middle">NOVEDADES</p>
+        <div class="container_fluid ">
+            <div class="row">
+                <div class="col-12 ">
+                    <div class="banner p-5 text-center bg-image w-100 img-fluid" style="background-image: url('../assets/novedades.jpg">
+                        <div class="mask mt-5 mb-2">
+                            <div class="d-flex justify-content-center align-items-center h-100">
+                                <div class="textoPortada text-white d-block">
+                                    <h2 class=" textoPortada__element mt-5 mb-3 p-2">Contacto</h2>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </div> 
                 </div>
+            </div>
+        </div>
         <!-- Fin banner -->
 
 <!---------------Comienzo de secciones------------->
