--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -81,7 +81,7 @@
         <div class="container_fluid ">
             <div class="row">
                 <div class="col-12 ">
-                    <div class="banner p-5 text-center bg-image w-100 img-fluid" style="background-image: url('../assets/servicios\ banner.jpg');">
+                    <div class="banner p-5 text-center bg-image w-100 img-fluid" style="background-image: url('../assets/contacto.jpg">
                         <div class="mask mt-5 mb-2">
                             <div class="d-flex justify-content-center align-items-center h-100">
                                 <div class="textoPortada text-white d-block">
@@ -89,13 +89,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
-
-
-    <!-- Fin banner -->
+        <!-- Fin banner -->
         
     
     <!--Intro de formulario-->
